tests/duarouter/alternatives/style2_input/errors/route/route_prob_missing/errors.duarouter
Warning: No probability for a route in 'for vehicle '1'', using default.
